--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-17  Wilco Dijkstra  <wdijkstr@arm.com>
+
+	* gcc.target/aarch64/eh_return.c: New test.
+
 2017-01-17  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	* vec-rlmi-rlnm.c: New file.
