--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -2252,10 +2252,10 @@ attributes that affect type identity, such as ia32 calling convention
 attributes (e.g. @samp{stdcall}).
 
 Version 11, which first appeared in G++ 7, corrects the mangling of
-sizeof... expressions.  For multiple entities with the same name within
-a function, that are declared in different scopes, the mangling now
-changes starting with the eighth occurence.  It also implies
-@option{-fnew-inheriting-ctors}.
+sizeof... expressions and operator names.  For multiple entities with
+the same name within a function, that are declared in different scopes,
+the mangling now changes starting with the eighth occurence.  It also
+implies @option{-fnew-inheriting-ctors}.
 
 See also @option{-Wabi}.
 
