--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2017-01-18  Markus Trippelsdorf  <markus@trippelsdorf.de>
 
+	* doc/invoke.texi (fabi-version): Spelling fix.
+
+2017-01-18  Markus Trippelsdorf  <markus@trippelsdorf.de>
+
 	PR c++/70182
 	* doc/invoke.texi (fabi-version): Mention mangling fix for
 	operator names.
