--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/78894 - ICE with class deduction and default arg
+	* pt.c (build_deduction_guide): Set DECL_PRIMARY_TEMPLATE.
+
 2017-01-18  Markus Trippelsdorf  <markus@trippelsdorf.de>
 
 	PR c++/77489
