--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-18  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/68925
+	* include/experimental/random (randint): Use temporary instead of
+	thread_local static.
+
 2017-01-17  Joshua Conner  <joshconner@google.com>
 
 	* crossconfig.m4: Add fuchsia OS.
