--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-18  Wilco Dijkstra  <wdijkstr@arm.com>
+
+	* config/aarch64/aarch64.c (aarch64_sched_adjust_priority)
+	New function.
+	(TARGET_SCHED_ADJUST_PRIORITY): Define target hook.
+
 2017-01-18  Maxim Ostapenko  <m.ostapenko@samsung.com>
 
 	PR lto/79061
